# mlua

./: .gitignore  CHANGELOG.md  Cargo.toml  FAQ.md  LICENSE  README.md  build.rs  codecov.yml  rustfmt.toml  tarpaulin.toml  typos.toml
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: coverage.yml  docs.yml  main.yml  typos.yml
benches/: benchmark.rs  serde.rs
docs/: UserData.md  chunk.md  lua_module.md
docs/release_notes/: v0.10.md  v0.9.md
examples/: async_http_client.rs  async_http_reqwest.rs  async_http_server.rs  async_tcp_server.rs  guided_tour.rs  repl.rs  serde.rs  serialize.rs  userdata.rs  yuescript.rs  yuescript_repl.rs
examples/module/: Cargo.toml
examples/module/src/: lib.rs
mlua-sys/: Cargo.toml  README.md
mlua-sys/src/: lib.rs  macros.rs
mlua-sys/src/lua51/: compat.rs  lauxlib.rs  lua.rs  lualib.rs  mod.rs
mlua-sys/src/lua52/: compat.rs  lauxlib.rs  lua.rs  lualib.rs
mlua-sys/src/lua53/: compat.rs  lauxlib.rs  lua.rs  lualib.rs
mlua-sys/src/lua54/: compat.rs  lauxlib.rs  lua.rs  lualib.rs  mod.rs
mlua-sys/src/lua55/: lauxlib.rs  lua.rs  lualib.rs  mod.rs
mlua-sys/src/luau/: compat.rs  lauxlib.rs  lua.rs  luacode.rs  luacodegen.rs  lualib.rs  luarequire.rs  mod.rs
mlua_derive/: Cargo.toml
mlua_derive/src/: chunk.rs  from_lua.rs  from_lua_table.rs  lib.rs  module.rs  to_lua.rs  to_lua_table.rs  token.rs  userdata.rs  userdata_impl.rs
mlua_derive/src/chunk/: mod.rs  token.rs
mlua_derive/src/userdata/: attr.rs  mod.rs  userdata_impl.rs
src/: buffer.rs  chunk.rs  conversion.rs  debug.rs  error.rs  function.rs  hook.rs  lib.rs  lua.rs  luau.rs  macros.rs  memory.rs  multi.rs  prelude.rs  scope.rs  state.rs  stdlib.rs  string.rs  table.rs  thread.rs  traits.rs  types.rs  userdata.rs  userdata_cell.rs  userdata_ext.rs  userdata_impl.rs  util.rs  value.rs  vector.rs
src/ffi/: compat53.rs  internals51.rs  lauxlib.rs  lua.rs  luaconf.rs  lualib.rs  mod.rs  safe.rs  symbols.rs
src/ffi/glue/: glue.c
src/ffi/lua51/: compat.rs  lauxlib.rs  lua.rs  lualib.rs  mod.rs
src/ffi/lua52/: compat.rs  lua.rs  mod.rs
src/ffi/lua53/: compat.rs  lua.rs  lualib.rs  mod.rs
src/ffi/lua54/: lua.rs  mod.rs
src/ffi/lua_factorio/: compat.rs  lauxlib.rs  lua.rs  lualib.rs
src/ffi/luau/: compat.rs  lauxlib.rs  lua.rs  luacode.rs  lualib.rs  mod.rs
src/ffi/shim/: compat-5.3.c  shim.c  symbols.c
src/ffi/yuescript/: mod.rs
src/luau/: heap_dump.rs  json.rs  mod.rs  package.rs  require.rs
src/luau/require/: fs.rs
src/serde/: de.rs  mod.rs  ser.rs
src/state/: extra.rs  raw.rs  util.rs
src/types/: app_data.rs  either.rs  registry_key.rs  sync.rs  value_ref.rs  vector.rs
src/userdata/: cell.rs  ext.rs  lock.rs  object.rs  ref.rs  registry.rs  util.rs
src/util/: error.rs  mod.rs  path.rs  short_names.rs  types.rs  userdata.rs
tests/: _lua.rs  async.rs  buffer.rs  byte_string.rs  chunk.rs  compile.rs  compile_fail.rs  conversion.rs  debug.rs  error.rs  function.rs  hooks.rs  loadfile.lua  loadfile.rs  luau.rs  macros.rs  memory.rs  multi.rs  pluto.rs  scope.rs  scope.rs.1  send.rs  serde.rs  static.rs  string.rs  table.rs  tests.rs  thread.rs  types.rs  ucid.rs  userdata.rs  userdata_macro.rs  value.rs
tests/compile/: async_any_userdata_method.rs  async_any_userdata_method.stderr  async_nonstatic_userdata.rs  async_nonstatic_userdata.stderr  async_userdata_method.rs  async_userdata_method.stderr  chunk_dollar_non_ident.rs  chunk_dollar_non_ident.stderr  function_borrow.rs  function_borrow.stderr  lua_norefunwindsafe.rs  lua_norefunwindsafe.stderr  non_send.rs  non_send.stderr  ref_nounwindsafe.stderr  scope_callback_capture.rs  scope_callback_capture.stderr  scope_callback_inner.rs  scope_callback_inner.stderr  scope_callback_outer.rs  scope_callback_outer.stderr  scope_invariance.rs  scope_invariance.stderr  scope_mutable_aliasing.rs  scope_mutable_aliasing.stderr  scope_userdata_borrow.rs  scope_userdata_borrow.stderr  static_callback_args.stderr  userdata_borrow.rs  userdata_borrow.stderr  userdata_const_getter.rs  userdata_const_getter.stderr  userdata_field_async.rs  userdata_field_async.stderr  userdata_field_with_args.rs  userdata_field_with_args.stderr  userdata_getter_and_meta.rs  userdata_getter_and_meta.stderr  userdata_getter_and_setter.rs  userdata_getter_and_setter.stderr  (+18 more)
tests/compile_fail/: async_nonstatic_userdata.rs  async_nonstatic_userdata.stderr  function_borrow.rs  function_borrow.stderr  lua_norefunwindsafe.stderr  ref_nounwindsafe.rs  ref_nounwindsafe.stderr  scope_callback_capture.rs  scope_callback_capture.stderr  scope_callback_inner.rs  scope_callback_inner.stderr  scope_callback_outer.rs  scope_callback_outer.stderr  scope_invariance.rs  scope_invariance.stderr  scope_mutable_aliasing.rs  scope_mutable_aliasing.stderr  scope_userdata_borrow.rs  scope_userdata_borrow.stderr  static_callback_args.rs
tests/luau/: cont.rs  require.rs
tests/luau/require/with_config/src/: alias_requirer_uc.luau
tests/luau/require/without_config/: validate_cache.luau
tests/module/: Cargo.toml  build.rs
tests/module/.cargo/: config
tests/module/loader/: Cargo.toml
tests/module/loader/.cargo/: config
tests/module/loader/tests/: load.rs
tests/module/src/: lib.rs
tests/module/tests/: load.rs
tests/scripts/compile/: b.lua  info.md
tests/scripts/multi_file_def/: c.lua  d.lua  info.md
