[package]
name = "mlua_derive"
version = "0.11.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
rust-version = "1.88"
edition = "2024"
description = "Procedural macros for the mlua crate."
repository = "https://github.com/mlua-rs/mlua"
keywords = ["lua", "mlua"]
license = "MIT"

[lib]
proc-macro = true

[features]
macros = ["proc-macro-error2", "itertools"]

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error2 = { version = "2.0.1", optional = true }
syn = { version = "2.0", features = ["full"] }
itertools = { version = "0.14", optional = true }
